--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -126,9 +126,9 @@
         & + button {
             margin-left: 5px;
         }
-        &.mixitup-control-active{
+        &.mixitup-control-active {
             background-color: $red;
-            color:#fff;
+            color: #fff;
         }
     }
 }
@@ -180,8 +180,9 @@
         padding: 10px 30px;
     }
     &-author {
-        display:flex;
+        display: flex;
         align-items: center;
+        max-width: 245px;
         .avatar {
             width: 30px;
             height: 30px;
@@ -197,25 +198,62 @@
             font-weight: 500;
         }
     }
-}
-.products__inner-box{
-    display:flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-.products__bottom-btn{
-    text-align: center;
-    button{
-        margin: 45px 5px 0;
-        box-shadow: 0px 1px 3px 0px rgba(204, 216, 228, 0.75);
-        border:none;
-        background-color: #fff;
-        color: $bg;
-        padding: 20px 30px;
-        cursor:pointer;
-        &.mixitup-control-active{
-            background-color: $red;
-            color:#fff;
+    &-star {
+        font-size: 12px;
+        span {
+            color: $bg;
         }
     }
 }
+.products__inner-box {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.products__bottom-btn {
+    text-align: center;
+    button {
+        margin: 45px 5px 0;
+        box-shadow: 0px 1px 3px 0px rgba(204, 216, 228, 0.75);
+        border: none;
+        background-color: #fff;
+        color: $bg;
+        padding: 20px 30px;
+        cursor: pointer;
+        &.mixitup-control-active {
+            background-color: $red;
+            color: #fff;
+        }
+    }
+}
+
+// START PRODUCT-SLIDER
+
+.product-slider {
+    padding: 110px 0 120px;
+    .slick-dots {
+        text-align: center;
+        margin-top: 50px;
+        li {
+            display: inline-block;
+            margin-left: 3px;
+            margin-right: 3px;
+            &.slick-active{
+                button{
+                    background-color: $green;
+                }
+            }
+            button {
+                border-radius: 50%;
+                background-color: rgb(232, 232, 232);
+                border:none;
+                font-size: 0;
+                width: 16px;
+                height: 16px;
+                cursor: poiner;
+                outline: none;
+            }
+        }
+    }
+}
+
