--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -69,13 +69,13 @@
     &-title {
         margin-bottom: 10px;
         font-size: 48px;
-        font-weight: 700;
+        @include f700;
         line-height: 72px;
     }
     &-text {
         margin-bottom: 50px;
         font-size: 20px;
-        font-weight: 500;
+        @include f500;
         line-height: 30px;
     }
     &-form {
@@ -90,12 +90,12 @@
             height: 56px;
             border: none;
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
             padding-left: 25px;
             padding-right: 60px;
             &::placeholder {
                 color: #90a4ae;
-                font-weight: 500;
+                @include f500;
             }
         }
         button {
@@ -150,7 +150,7 @@
         padding: 10px 30px;
         min-height: 90px;
         align-items: center;
-        font-weight: 500;
+        @include f500;
         border-bottom: 1px solid #e7ecf2;
     }
     &-name {
@@ -159,7 +159,7 @@
     &-title {
         font-size: 18px;
         color: $bg;
-        font-weight: 500;
+        @include f500;
         display: block;
     }
     &-category {
@@ -170,7 +170,7 @@
     &-price {
         font-size: 20px;
         color: $bg;
-        font-weight: 700;
+        @include f700;
     }
     &-info {
         display: flex;
@@ -195,7 +195,7 @@
         }
         span {
             font-size: 14px;
-            font-weight: 500;
+            @include f500;
         }
     }
     &-star {
@@ -238,15 +238,15 @@
             display: inline-block;
             margin-left: 3px;
             margin-right: 3px;
-            &.slick-active{
-                button{
+            &.slick-active {
+                button {
                     background-color: $green;
                 }
             }
             button {
                 border-radius: 50%;
                 background-color: rgb(232, 232, 232);
-                border:none;
+                border: none;
                 font-size: 0;
                 width: 16px;
                 height: 16px;
@@ -257,3 +257,74 @@
     }
 }
 
+// START ADVANTAGES
+
+.advantages {
+    background-color: $bg;
+    padding: 110px 0;
+}
+.advantages__title {
+    color: #fff;
+}
+.advantages__inner {
+    display: flex;
+    justify-content: space-between;
+}
+.advantages__item {
+    max-width: 370px;
+    text-align: center;
+    padding: 0 15px;
+    &:hover {
+        .advantages__item-images {
+            background-color: $green;
+        }
+        .advantages__item-title {
+            color: $green;
+        }
+        .advantages__item-images{
+            svg{
+                fill:#fff;
+            }
+        }
+    }
+    &-images {
+        width: 114px;
+        height: 114px;
+        background-color: #fff;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto 30px;
+        transition: all 0.5s;
+    }
+    &-title {
+        margin-bottom: 25px;
+        font-size: 24px;
+        color: #fff;
+        @include f500;
+        transition: all 0.5s;
+    }
+    &-text {
+        font-size: 15px;
+        color: #b0bec5;
+    }
+}
+.icosvg-1 {
+    svg {
+        width: 70px;
+        height: 70px;
+    }
+}
+.icosvg-2 {
+    svg {
+        width: 80px;
+        height: 80px;
+    }
+}
+.icosvg-3 {
+    svg {
+        width: 90px;
+        height: 90px;
+    }
+}
