--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -6,6 +6,10 @@ html {
 *::after {
     box-sizing: inherit;
 }
+html,
+body {
+    height: 100%;
+}
 a {
     display: inline-block;
     text-decoration: none;
@@ -23,11 +27,23 @@ body {
     line-height: 24px;
     font-weight: 400;
     color: $text;
+    overflow-x: hidden;   //чтобы не было скрола при уезде меню на хедере вправо
 }
 .container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
+}
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+.content {
+    flex: 1 0 auto;
+}
+.footer {
+    flex: 0 0 auto;
 }
 .container-fluid {
     max-width: 100%;
@@ -36,10 +52,10 @@ body {
 }
 @media (max-width: 720px) {
     .container-fluid {
-        padding: 0 15px;        //для малых устройств фишечка все что меньше 720px
+        padding: 0 15px; //для малых устройств фишечка все что меньше 720px
     }
 }
-.title{
+.title {
     text-align: center;
     color: $bg;
     @include f700;
@@ -47,20 +63,58 @@ body {
     line-height: 60px;
     margin-bottom: 30px;
 }
-.rate-star{
+.rate-star {
     display: inline-block;
     margin-right: 13px;
 }
 
-.angle-right{
+.angle-right {
     position: relative;
     padding-left: 15px;
-    &::before{
+    &::before {
         content: "\f105";
         font-family: "icomoon";
-        position:absolute;
+        position: absolute;
         left: 0;
-        color:$green;
+        color: $green;
         font-size: 14px;
+    }
+}
+#trueModal {
+    display: none;
+}
+
+.page-content {
+    background-color: $grey;
+}
+.breadcrumbs {
+    &__inner {
+        padding: 45px 0px 40px;
+        overflow: hidden;
+        width: 1200px;
+    }
+    &__list {
+        li {
+            display: inline-block;
+            position: relative;
+            & + li {
+                padding-left: 24px;
+                &::before {
+                    content: "-";
+                    position: absolute;
+                    left: 8px;
+                    color: $green;
+                }
+            }
+            &:last-child {
+                a,
+                span {
+                    color: $bg;
+                }
+            }
+        }
+        a {
+            color: #b0bec5;
+        }
     }
 }
