added product details page

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -63,11 +63,11 @@ body {
     line-height: 60px;
     margin-bottom: 30px;
 }
-.rate-star {
+
+.products__item-star .rate-star {
     display: inline-block;
     margin-right: 13px;
 }
-
 .angle-right {
     position: relative;
     padding-left: 15px;
