--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1321,34 +1321,33 @@
 
 //  END ABOUT
 
-
 //  START CONTACT
-.contact__head{
+.contact__head {
     padding-left: 40px;
     padding-right: 40px;
 }
-.contact__inner{
+.contact__inner {
     padding: 35px 40px 15px;
 }
-.contact__map{
+.contact__map {
     margin-bottom: 50px;
-    iframe{
+    iframe {
         width: 100%;
         height: 415px;
     }
 }
-.contact__box{
+.contact__box {
     display: flex;
 }
-.contact__info{
+.contact__info {
     margin-right: 30px;
     max-width: 330px;
     width: 100%;
 }
-.contact__info-item{
+.contact__info-item {
     margin-bottom: 30px;
 }
-.contact__info-title{
+.contact__info-title {
     padding-bottom: 20px;
     position: relative;
     font-size: 20px;
@@ -1356,54 +1355,54 @@
     color: $bg;
     padding-left: 40px;
     margin-bottom: 20px;
-    &::after{
+    &::after {
         position: absolute;
-        content:"";
+        content: "";
         width: 44px;
         height: 4px;
         background-color: $green;
         left: 40px;
         bottom: 0;
     }
-    &::before{
-        color:$green;
+    &::before {
+        color: $green;
         font-size: 24px;
         position: absolute;
         left: 0;
     }
 }
-.contact__info-content{
+.contact__info-content {
     padding-left: 40px;
-    color:#707070;
-    max-width:230px;
+    color: #707070;
+    max-width: 230px;
 }
-.contact__form-title{
+.contact__form-title {
     font-size: 24px;
     @include f500;
     margin-bottom: 16px;
-    color:#333;
+    color: #333;
 }
-.contact__form-row{
+.contact__form-row {
     display: flex;
     justify-content: space-between;
 }
-.contact__form{
+.contact__form {
     width: 100%;
-    input{
-        border:none;
+    input {
+        border: none;
         height: 43px;
         padding-left: 17px;
         padding-right: 17px;
         background-color: #f1f4f5;
         width: 350px;
         margin-bottom: 30px;
-        &::placeholder{
+        &::placeholder {
             font-size: 15px;
-            color:#7a7a7a;
+            color: #7a7a7a;
         }
     }
-    textarea{
-        border:none;
+    textarea {
+        border: none;
         padding: 13px 17px;
         height: 190px;
         background-color: #f1f4f5;
@@ -1411,19 +1410,19 @@
         display: block;
         resize: none;
         margin-bottom: 23px;
-        &::placeholder{
+        &::placeholder {
             font-size: 15px;
-            color:#7a7a7a;
+            color: #7a7a7a;
         }
     }
-    button{
-        border:none;
+    button {
+        border: none;
         background-color: $green;
         font-size: 16px;
         text-transform: uppercase;
         text-align: center;
         @include f700;
-        color:#fff;
+        color: #fff;
         padding: 20px 5px;
         width: 190px;
     }
@@ -1431,6 +1430,96 @@
 
 //  END CONTACT
 
+//  START SETTINGS
+.settings{
+    padding-bottom: 100px;
+}
+.product-one__tabs.settings__tabs {
+    display: flex;
+    .tabs {
+        max-width: 270px;
+        width: 100%;
+        margin-right: 30px;
+        border: 1px solid #dedede;
+        border-bottom: none;
+        text-align: left;
+        display: block;
+        height: 100%;
+        span {
+            display: block;
+            border-bottom: #dedede;
+            background-color: #fff;
+            padding: 17px 17px 17px 50px;
+            color:#707070;
+            font-size: 14px;
+            @include f500;
+            &.active {
+                border-bottom: 1px solid $green;
+                color:#37474f;
+                &::before {
+                    color: $green;
+                }
+            }
+            &::before {
+                left: 24px;
+                color: #444;
+            }
+        }
+    }
+    .tabs .tab + .tab {
+        border-left: none;
+    }
+    .tab__content {
+        width: 100%;
+        padding: 0;
+        border:none;
+        background-color: transparent;
+    }
+}
+.page-box{
+    background-color: #fff;
+    border:1px solid #dedede;
+    min-height: 100%;
+}
+.page-box__title{
+    border-bottom: 1px solid #dedede;
+    padding: 18px 34px;
+    color:$bg;
+    font-size: 24px;
+    @include f500;
+}
+.page-box__content{
+    padding: 30px 35px 80px;
+}
+.setting__line{
+    margin-bottom: 21px;
+    display:flex;
+    align-items: center;
+    label{
+        color:#444;
+        width:260px
+    }
+    input{
+        max-width: 540px;
+        width: 100%;
+        height: 40px;
+        color:#000;
+        background-color: #f9f9f9;
+        border: 1px solid #dedede; 
+        padding: 0 10px;
+    }
+    select{
+        max-width: 540px;
+        width: 100%;
+        height: 40px;
+        color:#000;
+        background-color: #f9f9f9;
+        border: 1px solid #dedede; 
+        padding: 0 10px;
+        color:#707070;
+    }
+}
+//  END SETTINGS
 
 //  START NEW-ITEMS PAGE
 .product-page__inner {
