--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1641,16 +1641,16 @@
     }
 }
 .profile-settings {
-    .product-one__tabs.settings__tabs{
+    .product-one__tabs.settings__tabs {
         .tabs span {
             font-weight: 500;
             font-family: "Roboto", sans-serif !important;
-            color:#707070;
+            color: #707070;
             position: relative;
-            &.active::before{
-                color:$green;
+            &.active::before {
+                color: $green;
             }
-            &::before{
+            &::before {
                 top: 15px;
                 font-family: "icomoon";
                 position: absolute;
@@ -1710,6 +1710,148 @@
 }
 
 // END PROFILE
+
+//   START UPLOAD
+
+.upload__inner {
+    background-color: #fff;
+    border: 1px solid #d7d7d7;
+    margin-bottom: 110px;
+    button {
+        color: #fff;
+        background-color: $green;
+        border: none;
+        padding: 15px 36px;
+        margin-left: 175px;
+        cursor: pointer;
+    }
+}
+.upload__inner-title {
+    padding: 16px 35px 18px;
+    @include f500;
+    font-size: 24px;
+    color: $bg;
+    border-bottom: 1px solid #d7d7d7;
+    margin-bottom: 40px;
+}
+.upload__inner-content {
+    margin-bottom: 30px;
+    padding-left: 45px;
+    padding-right: 50px;
+}
+.upload-line {
+    margin-bottom: 25px;
+    display: flex;
+    label {
+        min-width: 175px;
+        padding-top: 5px;
+        padding-right: 15px;
+        color: #444;
+        span {
+            color: $green;
+        }
+        &::placeholder {
+            color: #070707;
+        }
+    }
+    select,
+    input,
+    textarea {
+        width: 100%;
+        display: block;
+        border: 1px solid #d7d7d7;
+        height: 40px;
+        background-color: #f9f9f9;
+        padding: 0 18px;
+    }
+    textarea {
+        resize: none;
+        height: 150px;
+        padding: 8px 18px;
+    }
+    input[type="file"] {
+        outline: none;
+    }
+}
+.jq-selectbox {
+    width: 100%;
+}
+.jq-selectbox__select {
+    height: 40px;
+    padding: 0 18px;
+    border: 1px solid #d7d7d7;
+    border-bottom-color: #d7d7d7;
+    border-radius: 0;
+    background: #f9f9f9;
+    background: -o-linear-gradient(#fff, #e6e6e6);
+    box-shadow: none;
+    font: "Roboto-Regular", sans-serif;
+    color: #070707;
+    text-shadow: none;
+    line-height: 40px;
+}
+.jq-selectbox__trigger-arrow {
+    border: none;
+    top: 0;
+    right: 20px;
+    line-height: 40px;
+    font-size: 15px;
+    &::before {
+        font-family: "icomoon";
+        content: "\f0d7";
+        position: absolute;
+    }
+}
+.jq-selectbox__trigger {
+    border-left: none;
+}
+.jq-file {
+    box-shadow: none;
+    width: 100%;
+    border-radius: 0px;
+    border: 1px solid #d7d7d7;
+    height: 40px;
+    background-color: #f9f9f9;
+}
+.jq-file__name {
+    box-sizing: border-box;
+    width: 100%;
+    height: 40px;
+    padding: 0 18px;
+    border: none;
+    border-bottom-color: transparent;
+    border-radius: 0px;
+    background: transparent;
+    box-shadow: none;
+    line-height: 40px;
+    font-size: 12px;
+    color: #707070;
+    margin-left: 100px;
+}
+
+.jq-file__browse {
+    position: absolute;
+    top: 5px;
+    right: auto;
+    left: 9px;
+    padding: 0 12px;
+    border: 1px solid #d7d7d7;
+    border-left: 1px solid #d7d7d7;
+    border-radius: 0px;
+    background: #fff;
+    box-shadow: none;
+    text-shadow: none;
+    font-size: 12px;
+    line-height: 26px;
+    color: #444;
+}
+
+//  END UPLOAD
+
+//START WITHDRAWALS
+
+
+//END WITHDRAWALS
 
 //  START NEW-ITEMS PAGE
 .product-page__inner {
