--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -103,6 +103,7 @@ body {
                     content: "-";
                     position: absolute;
                     left: 8px;
+                    top: 14px;
                     color: $green;
                 }
             }
