added adaptive 404, widthdravals, about pages

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,3 +1,15 @@
+@media (max-width: 1200px) {
+    .withdrawals__inner {
+        display: block;
+    }
+    .withdrawals__col {
+        max-width: 100%;
+        margin-bottom: 20px;
+    }
+    .withdrawals__content-item {
+        max-width: 490px;
+    }
+}
 @media (max-width: 1150px) {
     .footer__inner {
         flex-wrap: wrap;
@@ -10,6 +22,13 @@
 @media (max-width: 1000px) {
     .header__text {
         display: none;
+    }
+}
+@media (max-width: 960px) {
+    .page-404__404::after {
+        width: 50px;
+        height: 97px;
+        background-size: cover;
     }
 }
 @media (max-width: 900px) {
@@ -65,6 +84,24 @@
         }
     }
 }
+@media (max-width: 740px) {
+    .page-404__404 {
+        font-size: 200px;
+        line-height: 200px;
+    }
+    .page-404__title {
+        font-size: 24px;
+        margin-bottom: 20px;
+        line-height: 30px;
+    }
+    .page-404__text {
+        font-size: 15px;
+        margin-bottom: 40px;
+    }
+    .page-404__link {
+        padding: 10px 30px 8px;
+    }
+}
 @media (max-width: 640px) {
     .notification__box,
     .message__box {
@@ -74,8 +111,47 @@
         right: auto;
     }
 }
+@media (max-width: 600px) {
+    .page-404__inner {
+        padding: 0 15px;
+    }
+    .page-404__404 {
+        font-size: 120px;
+        line-height: 120px;
+    }
+    .page-404__404::after {
+        top: 16px;
+        right: 0;
+        margin-left: 0;
+    }
+    .page-404__wrapper,
+    .about__wrapper {
+        margin-bottom: 50px;
+    }
+}
+@media (max-width: 540px) {
+    .footer__col {
+        min-width: 100%;
+    }
+    .footer__col-menu {
+        & + & {
+            margin-left: 0;
+            margin-top: 30px;
+        }
+    }
+    .withdrawals__content {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .withdrawals__content-item {
+        min-width: 490px;
+    }
+    .withdrawals__content-items {
+        overflow-x: scroll;
+    }
+}
 @media (max-width: 520px) {
-    .menu__list{
+    .menu__list {
         top: 70px;
     }
     .header__btn-menu {
@@ -129,23 +205,23 @@
         top: 52px;
     }
 }
-@media (max-width: 540px) {
-    .footer__col {
-        min-width: 100%;
-    }
-    .footer__col-menu {
-        & + & {
-            margin-left: 0;
-            margin-top: 30px;
-        }
-    }
-}
 @media (max-width: 495px) {
     .user__info {
         display: none;
     }
     .user__images {
         margin-right: 0;
+    }
+    .about__head {
+        padding: 23px 10px;
+    }
+    .about__inner {
+        padding: 0 10px;
+    }
+    .about__box {
+        p {
+            font-size: 13px;
+        }
     }
 }
 @media (max-width: 390px) {
@@ -157,15 +233,19 @@
     .basket__box {
         margin-left: 0;
     }
-    .menu__btn{
+    .menu__btn {
         left: 10px;
+    }
+    .withdrawals__form-line,
+    .jq-selectbox__select-text {
+        font-size: 11px;
     }
 }
 @media (max-width: 360px) {
     .user {
         margin-right: 0;
     }
-    .basket{
+    .basket {
         margin-right: 10px;
     }
     .header__logo {
@@ -175,8 +255,6 @@
         left: -20px;
     }
 }
-
-
 
 @media (min-width: 840px) {
     .menu__list {
