added adaptive upload, profile, settings, contact pages

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1519,6 +1519,9 @@
         color: #707070;
     }
 }
+.setting__line .jq-selectbox{
+    max-width: 540px;
+}
 //  END SETTINGS
 
 // START PROFILE
