--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -9,6 +9,12 @@
     .withdrawals__content-item {
         max-width: 490px;
     }
+    .contact__form-row {
+        display:block;
+    }
+    .contact__form input{
+        width: 100%;
+    }
 }
 @media (max-width: 1150px) {
     .footer__inner {
@@ -22,6 +28,23 @@
 @media (max-width: 1000px) {
     .header__text {
         display: none;
+    }
+    .product-one__tabs.settings__tabs{
+        display: block;
+    }
+    .product-one__tabs.settings__tabs .tabs{
+        margin-bottom: 20px;
+        max-width: 100%;
+    }
+    .setting__line{
+        display:block;
+        label{
+            display:inline-block;
+            margin-bottom: 5px;
+        }
+    }
+    .page-box__content{
+        padding: 20px 10px 40px;
     }
 }
 @media (max-width: 960px) {
@@ -43,6 +66,25 @@
         & + & {
             margin-left: 40px;
         }
+    }
+    .contact__box{
+        display: block;
+    }
+    .profile__inner{
+        flex-direction: column;
+    }
+    .profile__content{
+        order:-1;
+        margin-bottom: 20px;
+    }
+    .profile__aside{
+        max-width: 100%;
+        .aside__item{
+            width: 100%;
+        }
+    }
+    .profile__aside-btn{
+        width: 300px;
     }
 }
 @media (max-width: 840px) {
@@ -83,6 +125,13 @@
             }
         }
     }
+    .upload-line{
+        display:block;
+        label{
+            display:inline-block;
+            margin-bottom: 5px;
+        }
+    }
 }
 @media (max-width: 740px) {
     .page-404__404 {
@@ -110,6 +159,22 @@
     .circle__menu {
         right: auto;
     }
+    .profile__banner-images{
+        min-height: 240px;
+    }
+    .profile__items{
+        display: block;
+    }
+    .profile__item{
+        width: 100%;
+    }
+    .profile__item+.profile__item{
+        border-left:none;
+        border-top:1px solid #dedede;
+    }
+    .profile__banner{
+        margin-bottom: 20px;
+    }
 }
 @media (max-width: 600px) {
     .page-404__inner {
@@ -125,8 +190,45 @@
         margin-left: 0;
     }
     .page-404__wrapper,
-    .about__wrapper {
+    .about__wrapper,
+    .upload__inner,
+    .contact__wrapper  {
         margin-bottom: 50px;
+    }
+    .settings{
+        padding-bottom: 50px;
+    }
+    .upload__inner button{
+        margin-left: 0;
+    }
+    .upload__inner-content{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .upload__inner-title{
+        padding: 16px 10px 18px
+    }
+    .page-box__title{
+        padding: 18px 10px;
+    }
+    .contact__inner{
+        padding: 35px 10px 15px;
+    }
+    .contact__head{
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .container{
+        padding: 0 8px;
+    }
+    .contact__map iframe{
+        height: 300px;
+    }
+    .personal-box{
+        padding: 35px 10px 25px;
+    }
+    .profile__aside-btn{
+        width: 260px;
     }
 }
 @media (max-width: 540px) {
